# cbmrnp

./: .gitignore  CMakeLists.txt  GLWidget.cpp  GLWidget.hpp  README  fs.glsl  images.qrc  main.cpp  shader.qrc  vs.glsl
glbase/: CMakeLists.txt
gui/: cli.cpp  glwidget.cpp  glwidget.hpp
objects/: drawable.cpp  drawable.h  planet.cpp  planet.h  skybox.cpp  skybox.h  spacetime.cpp  spacetime.h
shader/: planet.fs.glsl  planet.vs.glsl  spacetime.fs.glsl  spacetime.vs.glsl
